update method by find hotel for users. Adding colculation price and exeminatin data introduced user